--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <body ng-controller="mainCtrl">
 
 
-    <input ng-model = "userInput.name"  type="text" name="" placeholder="Name">
-      <input ng-model = "userInput.age"  type="text" name="" placeholder="Age">
-        <input ng-model = "userInput.gender"  type="text" name="" placeholder="Gender">
-    <button  ng-click="submit(userInput)" type="button" name="button">Submit</button>
+    <input ng-model = "userInput.name"   placeholder="Name">
+      <input ng-model = "userInput.age"   placeholder="Age">
+        <input ng-model = "userInput.gender" placeholder="Gender">
+    <button ng-click="submit(userInput)"  name="button">Submit</button>
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js" charset="utf-8"></script>
     <script src="app.js"></script>
